@@ -1,3 +1,8 @@
+Mon Jul 27 19:03:07 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* include/ruby/intern.h (rb_*str_new_cstr, rb_str_buf_new_cstr),
+	  (rb_str_buf_cat2, rb_str_cat2, rb_exc_new2): suppress warnings.
+
 Mon Jul 27 10:24:50 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/rdoc/parser.rb (RDoc::Parser.binary?): fix for empty files.
